--- a/postit/package.json
+++ b/postit/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "firebase": "^5.3.0",
-    "moment": "^2.24.0",
-    "react": "^16.8.5",
-    "react-dom": "^16.8.5",
-    "react-redux": "^5.0.7",
-    "react-redux-firebase": "^2.1.6",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.8",
-    "redux": "^4.0.0",
-    "redux-firestore": "^0.5.7",
-    "redux-thunk": "^2.3.0",
-    "styled-components": "^4.2.0"
+    "firebase": "5.3.0",
+    "moment": "2.24.0",
+    "react": "16.8.5",
+    "react-dom": "16.8.5",
+    "react-redux": "5.0.7",
+    "react-redux-firebase": "2.1.6",
+    "react-router-dom": "4.3.1",
+    "react-scripts": "^3.3.0",
+    "redux": "4.0.0",
+    "redux-firestore": "0.5.7",
+    "redux-thunk": "2.3.0",
+    "styled-components": "4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
